# scan_util

./: CMakeLists.txt  main.cpp
scanner/: AhoCorasick.h  Detect.h  DirScanner.h  FileScanner.cpp  FileScanner.h  ScanStats.cpp  ScanStats.h
